--- a/src/app/templateform/templateform.component.html
+++ b/src/app/templateform/templateform.component.html
@@ -2,13 +2,16 @@
 <div>
     <form #regData="ngForm" (ngSubmit)="Register(regData)">
         <div>
-            First name : <input type="text" placeholder="enter name" name="firstname" ngModel>
+            First name : <input type="text" placeholder="enter name" required name="firstname" ngModel #fname="ngModel">
+            <span *ngIf="!fname.valid">name is required</span>
         </div>
         <div>
-            Last name : <input type="text" placeholder="enter name" name="lastname" ngModel>
+            Last name : <input type="text" placeholder="enter name" required name="lastname" ngModel #lname="ngModel">
+            <span *ngIf="!lname.valid">name is required</span>
         </div>
         <div>
-            Email : <input type="text" placeholder="enter name" name="email" ngModel>
+            Email : <input type="text" placeholder="enter name" required name="email" ngModel #email="ngModel">
+            <span *ngIf="!email.valid">name is required</span>
        </div>
         <div>
             <input type="submit" value="Regsiter" /> 
