--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
 <h1 *ngIf="valid">Hello abhishek</h1>
+
+<h1>hello abhisje</h1>
+<input type="radio" name="rad" checked (click)="onchange(true)">TRUE
+<input type="radio" name="rad" (click)="onchange(false)">FALSE
+
+<div *ngIf="isvalid">
+    valid
+</div >
+<div *ngIf="!isvalid">
+    Invalid
+</div>
